# AcaEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
projects/: quad.blend  scene.blend  scene.blend1
resources/models/: scene.mtl
resources/shader/: ambientOcclusion.frag  font.frag  font.geom  font.vert  fullscreen.vert  instanced3d.vert  model.frag  model.vert  phong.frag  simple.frag  simple_pass.frag  simple_pass.vert  sprite.frag  sprite.geom  sprite.vert  triangle.frag  triangle.vert
src/: main.cpp
src/engine/game/: Flyer.cpp  Flyer.hpp  Game.cpp  Game.hpp  GameState.cpp  GameState.hpp  Planet.cpp  Planet.hpp  Registry.cpp  Registry.hpp
src/engine/game/actions/: Actions.hpp
src/engine/game/registry/: Archetype.hpp  ComponentArray.hpp  ComponentType.hpp  Components.hpp  Entity.hpp  EntityRef.cpp  EntityRef.hpp  Registry.cpp  Registry.hpp  component_type.hpp
src/engine/game/states/: ExampleScene.cpp  ExampleScene.hpp  HorizontalSpring.cpp  HorizontalSpring.hpp  MovingPlanets.cpp  MovingPlanets.hpp  Shooter.cpp  Shooter.hpp  Start.cpp  Start.hpp
src/engine/game/systems/: Actions.hpp
src/engine/game/tests/: RegistryTest.cpp  testutils.hpp
src/engine/graphics/: camera.cpp  camera.hpp
src/engine/graphics/core/: Game.cpp  Game.hpp  GameState.cpp  GameState.hpp  buffer.cpp  buffer.hpp  device.cpp  device.hpp  framebuffer.cpp  framebuffer.hpp  geometrybuffer.cpp  geometrybuffer.hpp  hSpring.cpp  hSpring.h  mesh.cpp  mesh.h  opengl.cpp  opengl.hpp  sampler.cpp  sampler.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  vertexformat.cpp  vertexformat.hpp
src/engine/graphics/renderer/: fontrenderer.cpp  fontrenderer.hpp  mesh.cpp  mesh.hpp  meshrenderer.cpp  meshrenderer.h  meshrenderer.hpp  sprite.cpp  sprite.hpp  spriterenderer.cpp  spriterenderer.hpp
src/engine/input/: action.hpp  inputmanager.cpp  inputmanager.hpp  keyboardInterface.cpp  keyboardInterface.hpp  keys.hpp
src/engine/math/: directions.h  geometrictypes.hpp  glmext.hpp  intersection.hpp
src/engine/utils/: assert.cpp  assert.hpp  blockalloc.hpp  config.cpp  config.hpp  meshloader.cpp  meshloader.hpp  metaproghelpers.hpp  resourcemanager.hpp  typeindex.cpp  typeindex.hpp
src/engine/utils/containers/: dyntuple.hpp  hashmap.hpp  octree.hpp  slotmap.hpp  weakslotmap.hpp
tests/: CMakeLists.txt  test_meshdata_load.cpp  test_octree.cpp  test_slotmap.cpp
